manifests/yaml_samples/ingress.yaml
# 도메인 기반 라우팅
# 외부 트래픽을 클러스터 내부 서비스로 전달

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: myapp.test.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-service
            port:
              number: 80
